--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "database",
   "version": "1.0.0",
-  "description": "",
+  "description": "Login registeration model using Nodejs and MYSQL",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "Deenadayalan",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.3"
